--- a/crm/src/main/webapp/pages/modular/crm/commodity_category/edit.html
+++ b/crm/src/main/webapp/pages/modular/crm/commodity_category/edit.html
@@ -2,26 +2,27 @@
 <form  id="editForm" lay-filter="editForm" class="layui-form model-form">
     <input name="category_id" type="hidden"/>
     <div class="layui-form-item">
-        <div class="layui-inline">
-            <label class="layui-form-label">商品分类编码<span style="color: red;">*</span></label>
-            <div class="layui-input-inline">
-                <input type="text" id="code" name="code" lay-verify="required"  maxlength="64" autocomplete="off" class="layui-input">
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">分类编码<span style="color: red;">*</span></label>
+            <div class="layui-input-block">
+                <input type="text" id="code" name="code" required lay-verify="required" placeholder="请输入分类编码"
+                       autocomplete="off" class="layui-input">
             </div>
         </div>
-    </div>
-    <div class="layui-form-item">
-        <div class="layui-inline">
-            <label class="layui-form-label">商品分类名称<span style="color: red;">*</span></label>
-            <div class="layui-input-inline">
-                <input type="text" id="category_name" name="category_name" lay-verify="required"  maxlength="128" autocomplete="off" class="layui-input">
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">分类名称<span style="color: red;">*</span></label>
+            <div class="layui-input-block">
+                <input type="text" id="category_name" name="category_name" required lay-verify="required"
+                       placeholder="请输入分类名称" autocomplete="off" class="layui-input">
             </div>
         </div>
-    </div>
-    <div class="layui-form-item">
-        <div class="layui-inline">
+
+        <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">备注</label>
-            <div class="layui-input-inline">
-                <textarea  id="note" name="note"  autocomplete="off" class="layui-input"/>
+            <div class="layui-input-block">
+                <textarea name="note" placeholder="请输入内容" class="layui-textarea"></textarea>
             </div>
         </div>
     </div>
