--- a/crm/src/main/webapp/pages/modular/crm/customer/add.html
+++ b/crm/src/main/webapp/pages/modular/crm/customer/add.html
@@ -1,4 +1,4 @@
-@layout("/common/_container.html",{bg:"bg-white",js:["/assets/modular/crm/manufacturer/add.js"]}){
+@layout("/common/_container.html",{bg:"bg-white",js:["/assets/modular/crm/customer/add.js"]}){
 <form id="addForm" lay-filter="addForm" class="layui-form model-form">
     <div class="layui-form-item">
         <div class="layui-form-item">
@@ -14,46 +14,35 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">厂商名称<span style="color: red;">*</span></label>
-            <div class="layui-input-block">
-                <input type="text" id="manufacturer_name" name="manufacturer_name" required lay-verify="required" placeholder="请输入厂商名称"
-                       autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">厂商电话<span style="color: red;">*</span></label>
+            <label class="layui-form-label">客户名称<span style="color: red;">*</span></label>
             <div class="layui-input-inline">
-                <input type="text" id="manufacturer_phone" name="manufacturer_phone" required lay-verify="required" placeholder="请输入厂商电话"
+                <input type="text" id="customer_name" name="customer_name" required lay-verify="required" placeholder="请输入客户名称"
                        autocomplete="off" class="layui-input">
             </div>
-            <label class="layui-form-label">邮政编码</label>
+            <label class="layui-form-label">性别</label>
             <div class="layui-input-inline">
-                <input type="text" id="manufacturer_post" name="manufacturer_post"  placeholder="请输入邮政编码"
+                <select name="gender" id="gender"  lay-filter="gender" > </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">客户电话</label>
+            <div class="layui-input-inline">
+                <input type="text" id="customer_phone" name="customer_phone"  placeholder="请输入客户电话"
+                       autocomplete="off" class="layui-input">
+            </div>
+            <label class="layui-form-label">车牌号</label>
+            <div class="layui-input-inline">
+                <input type="text" id="customer_car_card" name="customer_car_card"  placeholder="请输入邮政编码"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">厂商地址<span style="color: red;">*</span></label>
+            <label class="layui-form-label">客户地址</label>
             <div class="layui-input-block">
-                <input type="text" id="manufacturer_addr" name="manufacturer_addr" required lay-verify="required" placeholder="请输入厂商地址"
+                <input type="text" id="customer_addr" name="customer_addr"  placeholder="请输入客户地址"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
-
-        <div class="layui-form-item">
-            <label class="layui-form-label">银行账户</label>
-            <div class="layui-input-block">
-                <input type="text" id="manufacturer_band_account" name="manufacturer_band_account"  placeholder="请输入银行账户"
-                       autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">联络部门</label>
-            <div class="layui-input-block">
-                <input type="text" id="manufacturer_dept" name="manufacturer_dept"  placeholder="请输入联络部门" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-
 
         <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">备注</label>
