--- a/crm/src/main/webapp/pages/modular/crm/customer/list.html
+++ b/crm/src/main/webapp/pages/modular/crm/customer/list.html
@@ -1,7 +1,7 @@
-@layout("/common/_container.html",{js:["/assets/modular/crm/manufacturer/list.js"]}){
+@layout("/common/_container.html",{js:["/assets/modular/crm/customer/list.js"]}){
 
 <div class="layui-body-header">
-    <span class="layui-body-header-title">厂商管理</span>
+    <span class="layui-body-header-title">客户管理</span>
 </div>
 
 <div class="layui-fluid">
@@ -21,20 +21,26 @@
                                 <select name="area" id="area" lay-filter="area"> </select>
                             </div>
                             <div class="layui-inline">
-                                <input id="manufacturer_name" class="layui-input"   maxlength="20" type="text" placeholder="定位厂商名称"/>
+                                <select name="gender" id="gender" lay-filter="area"> </select>
                             </div>
                             <div class="layui-inline">
-                                <input id="manufacturer_phone" class="layui-input"   maxlength="20" type="text" placeholder="定位厂商电话"/>
+                                <input id="customer_name" class="layui-input"   maxlength="20" type="text" placeholder="定位客户姓名"/>
+                            </div>
+                            <div class="layui-inline">
+                                <input id="customer_phone" class="layui-input"   maxlength="20" type="text" placeholder="定位客户电话"/>
+                            </div>
+                            <div class="layui-inline">
+                                <input id="customer_car_card" class="layui-input"   maxlength="20" type="text" placeholder="定位客户车牌"/>
                             </div>
                             <div class="layui-inline">
                                 <button id="btnSearch" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>搜索
                                 </button>
-                                @if(shiro.hasPermission("/manufacturer/add")){
-                                <button id="btnAdd" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i>添加厂商
+                                @if(shiro.hasPermission("/customer/add")){
+                                <button id="btnAdd" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i>添加客户
                                 </button>
                                 @}
-                                @if(shiro.hasPermission("/manufacturer/delete")){
-                                <button id="btnDeleteBatch" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67d;</i>批量作废</button>
+                                @if(shiro.hasPermission("/customer/delete")){
+                                <button id="btnDeleteBatch" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67d;</i>删除客户</button>
                                 @}
                             </div>
                         </div>
@@ -51,7 +57,7 @@
 <script type="text/html" id="tableBar">
     {{# if (d.delete_flag == 'N'){ }}
         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
-        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="delete">作废</a>
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="delete">删除</a>
     {{# }else {  }}
 
     {{# }  }}
