客户添加车型数据

--- a/crm/src/main/webapp/pages/modular/crm/customer/edit.html
+++ b/crm/src/main/webapp/pages/modular/crm/customer/edit.html
@@ -15,6 +15,18 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label">车型选择</label>
+            <div class="layui-input-inline">
+                <select name="car_brand_id" id="car_brand_id"  lay-filter="car_brand_id" >  </select>
+            </div>
+            <div class="layui-input-inline">
+                <select name="car_serial_id" id="car_serial_id"  lay-filter="car_serial_id" >  </select>
+            </div>
+            <div class="layui-input-inline">
+                <select name="car_basic_id" id="car_basic_id"  lay-filter="car_basic_id" > </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label">客户名称<span style="color: red;">*</span></label>
             <div class="layui-input-inline">
                 <input type="text" id="customer_name" name="customer_name" required lay-verify="required" placeholder="请输入客户名称"
