--- a/crm/src/main/webapp/pages/modular/crm/manufacturer_sales/list.html
+++ b/crm/src/main/webapp/pages/modular/crm/manufacturer_sales/list.html
@@ -21,6 +21,9 @@
                                 <select name="area" id="area" lay-filter="area"> </select>
                             </div>
                             <div class="layui-inline">
+                                <select name="manufacturer_id" id="manufacturer_id" lay-filter="manufacturer_id"> </select>
+                            </div>
+                            <div class="layui-inline">
                                 <input id="sales_name" class="layui-input"   maxlength="20" type="text" placeholder="定位厂商业务员姓名"/>
                             </div>
                             <div class="layui-inline">
