--- a/crm/src/main/webapp/pages/modular/crm/spend_category/list.html
+++ b/crm/src/main/webapp/pages/modular/crm/spend_category/list.html
@@ -12,10 +12,10 @@
                     <div class="layui-form toolbar">
                         <div class="layui-form-item">
                             <div class="layui-inline">
-                                <input id="code" class="layui-input"   maxlength="20" type="text" placeholder="定位支出类别编码"/>
+                                <input id="spend_category_code" class="layui-input"   maxlength="20" type="text" placeholder="定位支出类别编码"/>
                             </div>
                             <div class="layui-inline">
-                                <input id="category_name" class="layui-input"   maxlength="20" type="text" placeholder="定位支出类别名称"/>
+                                <input id="spend_category_name" class="layui-input"   maxlength="20" type="text" placeholder="定位支出类别名称"/>
                             </div>
                             <div class="layui-inline">
                                 <button id="btnSearch" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>搜索
