--- a/crm/src/main/webapp/pages/modular/crm/spend/edit.html
+++ b/crm/src/main/webapp/pages/modular/crm/spend/edit.html
@@ -6,7 +6,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">支出分类<span style="color: red;">*</span></label>
             <div class="layui-inline">
-                <select name="spend_category_id" id="spend_category_id" lay-filter="spend_category_id"> </select>
+                <select name="spend_category_id" id="spend_category_id" lay-filter="spend_category_id" lay-verify="required"> </select>
             </div>
         </div>
         <div class="layui-form-item">
@@ -19,7 +19,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">经手员工<span style="color: red;">*</span></label>
             <div class="layui-inline">
-                <select name="user_id" id="user_id" lay-filter="user_id"> </select>
+                <select name="user_id" id="user_id" lay-filter="user_id" lay-verify="required"> </select>
             </div>
         </div>
         <div class="layui-form-item">
@@ -29,6 +29,7 @@
                        placeholder="请输入支出金额" autocomplete="off" class="layui-input">
             </div>
         </div>
+
         <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">备注</label>
             <div class="layui-input-block">
