--- a/crm/src/main/webapp/pages/modular/crm/commodity_stock/list.html
+++ b/crm/src/main/webapp/pages/modular/crm/commodity_stock/list.html
@@ -12,6 +12,21 @@
                     <div class="layui-form toolbar">
                         <div class="layui-form-item">
                             <div class="layui-inline">
+                                <select name="province" id="province" lay-filter="province"> </select>
+                            </div>
+                            <div class="layui-inline">
+                                <select name="city" id="city" lay-filter="city"> </select>
+                            </div>
+                            <div class="layui-inline">
+                                <select name="area" id="area" lay-filter="area"> </select>
+                            </div>
+                            <div class="layui-inline">
+                                <select name="manufacturer_id" id="manufacturer_id" lay-filter="manufacturer_id"> </select>
+                            </div>
+                            <div class="layui-inline">
+                                <select name="manufacturer_sales_id" id="manufacturer_sales_id" lay-filter="manufacturer_sales_id"> </select>
+                            </div>
+                            <div class="layui-inline">
                                 <select name="category_id" id="category_id" lay-filter="category_id"> </select>
                             </div>
                             <div class="layui-inline">
@@ -29,12 +44,7 @@
                             <div class="layui-inline">
                                 <input id="deal_date" class="layui-input"   maxlength="20" type="text" placeholder="进/退货日期"/>
                             </div>
-                            <div class="layui-inline">
-                                <select name="manufacturer_id" id="manufacturer_id" lay-filter="manufacturer_id"> </select>
-                            </div>
-                            <div class="layui-inline">
-                                <select name="manufacturer_sales_id" id="manufacturer_sales_id" lay-filter="manufacturer_sales_id"> </select>
-                            </div>
+
                             <div class="layui-inline">
                                 <button id="btnSearch" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>搜索
                                 </button>
