--- a/crm/src/main/webapp/pages/modular/crm/commodity_stock/list.html
+++ b/crm/src/main/webapp/pages/modular/crm/commodity_stock/list.html
@@ -32,9 +32,9 @@
                             <div class="layui-inline">
                                 <select name="commodity_id" id="commodity_id" lay-filter="commodity_id"> </select>
                             </div>
-                            <div class="layui-inline">
-                                <select name="user_id" id="user_id" lay-filter="user_id"> </select>
-                            </div>
+                            <!--<div class="layui-inline">-->
+                                <!--<select name="user_id" id="user_id" lay-filter="user_id"> </select>-->
+                            <!--</div>-->
                             <div class="layui-inline">
                                 <select name="payment_status" id="payment_status" lay-filter="payment_status"> </select>
                             </div>
