--- a/crm/src/main/webapp/pages/modular/crm/commodity_stock/add.html
+++ b/crm/src/main/webapp/pages/modular/crm/commodity_stock/add.html
@@ -23,10 +23,10 @@
                 <select name="area" id="area"  lay-filter="area" lay-verify="required"> </select>
             </div>
             <div class="layui-inline">
-                <select name="manufacturer_id" id="manufacturer_id" lay-filter="manufacturer_id"> </select>
+                <select name="manufacturer_id" id="manufacturer_id" lay-filter="manufacturer_id" lay-verify="required"> </select>
             </div>
             <div class="layui-inline">
-                <select name="manufacturer_sales_id" id="manufacturer_sales_id" lay-filter="manufacturer_sales_id"> </select>
+                <select name="manufacturer_sales_id" id="manufacturer_sales_id" lay-filter="manufacturer_sales_id" lay-verify="required"> </select>
             </div>
         </div>
         <div class="layui-form-item">
