--- a/crm/src/main/webapp/pages/modular/crm/commodity_stock/edit.html
+++ b/crm/src/main/webapp/pages/modular/crm/commodity_stock/edit.html
@@ -1,32 +1,63 @@
 @layout("/common/_container.html",{bg:"bg-white",js:["/assets/modular/crm/commodity_stock/edit.js"]}){
 <form  id="editForm" lay-filter="editForm" class="layui-form model-form">
-    <input name="spend_id" type="hidden"/>
+    <input id="stock_id" name="stock_id" type="hidden"/>
     <div class="layui-form-item">
 
         <div class="layui-form-item">
-            <label class="layui-form-label">支出分类<span style="color: red;">*</span></label>
+            <label class="layui-form-label">选择商品<span style="color: red;">*</span></label>
             <div class="layui-inline">
-                <select name="spend_category_id" id="spend_category_id" lay-filter="spend_category_id" lay-verify="required"> </select>
+                <select name="category_id" id="category_id" lay-filter="category_id" lay-verify="required"> </select>
+            </div>
+            <div class="layui-inline">
+                <select name="commodity_id" id="commodity_id" lay-filter="spend_category_id" lay-verify="required"> </select>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">支出日期<span style="color: red;">*</span></label>
+            <label class="layui-form-label">经手厂商业务员<span style="color: red;">*</span></label>
+            <div class="layui-input-inline">
+                <select name="province" id="province"  lay-filter="province" lay-verify="required">  </select>
+            </div>
+            <div class="layui-input-inline">
+                <select name="city" id="city"  lay-filter="city" lay-verify="required">  </select>
+            </div>
+            <div class="layui-input-inline">
+                <select name="area" id="area"  lay-filter="area" lay-verify="required"> </select>
+            </div>
             <div class="layui-inline">
-                <input type="text" id="spend_date" name="spend_date" required lay-verify="required"
-                       placeholder="请输入支出日期" autocomplete="off" class="layui-input">
+                <select name="manufacturer_id" id="manufacturer_id" lay-filter="manufacturer_id" lay-verify="required"> </select>
+            </div>
+            <div class="layui-inline">
+                <select name="manufacturer_sales_id" id="manufacturer_sales_id" lay-filter="manufacturer_sales_id" lay-verify="required"> </select>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">经手员工<span style="color: red;">*</span></label>
+            <label class="layui-form-label">进/退货日期 经手员工<span style="color: red;">*</span></label>
+            <div class="layui-inline">
+                <input type="text" id="deal_date" name="deal_date" required lay-verify="required"
+                       placeholder="请选择进/退货日期" autocomplete="off" class="layui-input">
+            </div>
             <div class="layui-inline">
                 <select name="user_id" id="user_id" lay-filter="user_id" lay-verify="required"> </select>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">支出金额<span style="color: red;">*</span></label>
+            <label class="layui-form-label">进/退货 支付状态<span style="color: red;">*</span></label>
             <div class="layui-inline">
-                <input type="text" id="price" name="price" required lay-verify="required"
-                       placeholder="请输入支出金额" autocomplete="off" class="layui-input">
+                <select name="stock_category" id="stock_category" lay-filter="stock_category" lay-verify="required"> </select>
+            </div>
+            <div class="layui-inline">
+                <select name="payment_status" id="payment_status" lay-filter="payment_status" lay-verify="required"> </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">单价|数量<span style="color: red;">*</span></label>
+            <div class="layui-inline">
+                <input type="text" id="unit_price" name="unit_price" required lay-verify="required"
+                       placeholder="请输入单价" autocomplete="off" class="layui-input">
+            </div>
+            <div class="layui-inline">
+                <input type="text" id="amount" name="amount" required lay-verify="required|number"
+                       placeholder="请输入数量【区间1-99999】" autocomplete="off" class="layui-input">
             </div>
         </div>
 
