--- a/crm/src/main/webapp/pages/modular/crm/commodity_stock/add.html
+++ b/crm/src/main/webapp/pages/modular/crm/commodity_stock/add.html
@@ -56,7 +56,7 @@
             </div>
             <div class="layui-inline">
                 <input type="text" id="amount" name="amount" required lay-verify="required|number"
-                       placeholder="请输入数量【区间1-99999】" autocomplete="off" class="layui-input">
+                       placeholder="区间1-99999" autocomplete="off" class="layui-input">
             </div>
         </div>
 
