--- a/crm/src/main/webapp/pages/modular/crm/customer/list.html
+++ b/crm/src/main/webapp/pages/modular/crm/customer/list.html
@@ -56,6 +56,7 @@
 <!--   操作列模板   -->
 <script type="text/html" id="tableBar">
     {{# if (d.delete_flag == 'N'){ }}
+        <a class="layui-btn layui-btn-xs" lay-event="add_cell">出货</a>
         <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="delete">删除</a>
     {{# }else {  }}
