--- a/crm/src/main/webapp/pages/modular/crm/commodity_sell/edit.html
+++ b/crm/src/main/webapp/pages/modular/crm/commodity_sell/edit.html
@@ -1,6 +1,6 @@
 @layout("/common/_container.html",{bg:"bg-white",js:["/assets/modular/crm/commodity_sell/edit.js"]}){
 <form  id="editForm" lay-filter="editForm" class="layui-form model-form">
-    <input id="stock_id" name="stock_id" type="hidden"/>
+    <input id="sell_id" name="sell_id" type="hidden"/>
     <div class="layui-form-item">
 
         <div class="layui-form-item">
@@ -13,25 +13,14 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">经手厂商业务员<span style="color: red;">*</span></label>
-            <div class="layui-input-inline">
-                <select name="province" id="province"  lay-filter="province" lay-verify="required">  </select>
-            </div>
-            <div class="layui-input-inline">
-                <select name="city" id="city"  lay-filter="city" lay-verify="required">  </select>
-            </div>
-            <div class="layui-input-inline">
-                <select name="area" id="area"  lay-filter="area" lay-verify="required"> </select>
-            </div>
+            <label class="layui-form-label">客户<span style="color: red;">*</span></label>
             <div class="layui-inline">
-                <select name="manufacturer_id" id="manufacturer_id" lay-filter="manufacturer_id" lay-verify="required"> </select>
-            </div>
-            <div class="layui-inline">
-                <select name="manufacturer_sales_id" id="manufacturer_sales_id" lay-filter="manufacturer_sales_id" lay-verify="required"> </select>
+                <input type="hidden" id="customer_id" name="customer_id" required lay-verify="required"  autocomplete="off" class="layui-input">
+                <input type="text" id="customer_name" name="customer_name" disabled="disabled"  placeholder="请选择客户" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">进/退货日期 经手员工<span style="color: red;">*</span></label>
+            <label class="layui-form-label">经手员工<span style="color: red;">*</span></label>
             <div class="layui-inline">
                 <input type="text" id="deal_date" name="deal_date" required lay-verify="required"
                        placeholder="请选择进/退货日期" autocomplete="off" class="layui-input">
@@ -41,10 +30,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">进/退货 支付状态<span style="color: red;">*</span></label>
-            <div class="layui-inline">
-                <select name="stock_category" id="stock_category" lay-filter="stock_category" lay-verify="required"> </select>
-            </div>
+            <label class="layui-form-label">支付状态<span style="color: red;">*</span></label>
             <div class="layui-inline">
                 <select name="payment_status" id="payment_status" lay-filter="payment_status" lay-verify="required"> </select>
             </div>
@@ -57,7 +43,7 @@
             </div>
             <div class="layui-inline">
                 <input type="text" id="amount" name="amount" required lay-verify="required|number"
-                       placeholder="请输入数量【区间1-99999】" autocomplete="off" class="layui-input">
+                       placeholder="区间1-99999" autocomplete="off" class="layui-input">
             </div>
         </div>
 
@@ -67,7 +53,6 @@
                 <textarea name="note" placeholder="请输入内容" class="layui-textarea"></textarea>
             </div>
         </div>
-    </div>
 
     <div class="layui-form-item text-right">
         <button class="layui-btn layui-btn-primary" type="button" ew-event="closeDialog">取消</button>
